--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,3 @@
-/* App.css */
-
 .App {
   text-align: center;
 }
@@ -26,6 +24,17 @@ form {
   margin-bottom: 1rem;
 }
 
+.page-check-container {
+  display: flex;
+  justify-content: space-around;
+  width: 90vw;
+  max-width: 800px;
+}
+
+.page-check-group {
+  flex: 1;
+}
+
 .page-container {
   margin-bottom: 3rem;
   display: flex;
@@ -33,48 +42,42 @@ form {
   align-items: center;
 }
 
-/* ページ内の画像セットを配置するコンテナ */
 .image-set-container {
   display: flex;
-  flex-direction: column; /* 子要素を縦に並べる */
+  flex-direction: column;
   align-items: center;
-  gap: 20px; /* 比較画像と差分画像の間隔 */
+  gap: 20px;
 }
 
-/* ファイルAとファイルBを横並びにするコンテナ */
 .image-comparison-container {
   display: flex;
   flex-wrap: nowrap;
-  width: 90vw; /* <--- この行を追加 */
-  max-width: 1200px; /* <--- この行を追加 */
+  width: 90vw;
+  max-width: 1200px;
 }
 
-/* 個々の画像コンテナのスタイル */
 .image-pair {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  flex: 1; /* <--- この行を追加 */
+  flex: 1;
 }
 
-/* ファイルAとBの間にマージンをなくす */
 .image-comparison-container .image-pair {
   margin-right: 0;
 }
 
-/* 画像自体のスタイル */
 .image-pair img {
-  width: 100%; /* <--- この行を追加 */
+  width: 100%;
   height: auto;
   border: 1px solid #ddd;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-top: 10px;
 }
 
-/* 差分画像はサイズを自動調整 */
 .diff-image-pair img {
-  max-width: 800px;
+  max-width: 90%;
 }
 
 .image-pair h3 {
@@ -92,7 +95,11 @@ form {
   margin-top: 1rem;
 }
 
-/* 画面幅が狭い場合の調整 */
+.warning {
+  color: yellow;
+  font-weight: bold;
+}
+
 @media (max-width: 800px) {
   .image-comparison-container {
     flex-direction: column;
