--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,6 +14,8 @@ code {
 
 .App {
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .App-header {
@@ -34,6 +36,7 @@ form {
   align-items: center;
   gap: 20px;
   margin-top: 20px;
+
 }
 
 hr {
@@ -57,6 +60,11 @@ button {
 .cancel-button {
   background-color: #ff6b6b;
   color: white;
+  padding: 8px;
+}
+
+.cancel-button:hover {
+  background-color: #daa0a0;
 }
 
 .status-message {
@@ -145,7 +153,7 @@ button {
   display: none;
 }
 
-.file-input-container {
+/* .file-input-container {
   display: flex;
   align-items: center;
   gap: 10px;
@@ -153,11 +161,18 @@ button {
   flex-wrap: nowrap;
   width: 100%;
   max-width: 600px;
+} */
+.file-input-container {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* 要素間の間隔を調整 */
+  margin-bottom: 20px;
 }
 
 .file-input-container label {
-  min-width: 80px;
-  text-align: left;
+  width: 150px;
+  text-align: center;
+  flex-shrink: 0;
 }
 
 .page-check-container {
@@ -179,4 +194,20 @@ button {
 
 .page-check-group li {
   margin-bottom: 5px;
+}
+
+.custom-file-upload {
+  display: inline-block;
+  padding: 8px;
+  cursor: pointer;
+  background-color: #3f51b5;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  /* margin-top: 10px; */
+}
+
+.custom-file-upload:hover {
+  background-color: #303f9f;
 }
