--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #282c34;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,13 +15,15 @@ code {
 
 .App {
   text-align: center;
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .App-header {
   background-color: #282c34;
+  max-width: 80%;
   min-height: 100vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
